--- a/Index.html
+++ b/Index.html
@@ -15,22 +15,22 @@
 
 <body>
     <header>
-        <div class="Logo">
-            <a href="Olga.html">
-                <img src="img/Logo.png" alt="Logo strony Olgi" />
-            </a>
-        </div>
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbutton">
-            <ion-icon name="menu"></ion-icon>
-        </label>
+
 
         <nav class="Menu">
             <ul>
-                <li><a href="#">Start</a></li>
+                <li><div class="Logo">
+                    <a href="#">
+                        <img src="img/Logo.png" alt="Logo strony Olgi" />
+                    </a>
+                </div>
+                <input type="checkbox" id="check">
+                <label for="check" class="checkbutton">
+                    <ion-icon name="menu"></ion-icon>
+                </label></li>
                 <li><a href="#panele">Filmy</a></li>
                 <li><a href="#galeria">Galeria</a></li>
-                <li><a href="#kontakt">Kontakt</a></li>
+                <li><a href="#stopka">Kontakt</a></li>
             </ul>
         </nav>
         <div class="Darkmode">
@@ -159,7 +159,7 @@
     </div>
     </div>
     <footer>
-        <div class="gora">
+        <div class="gora" id="stopka">
             <div class="stopka">
                 <div class="Logo">
                     <a href="Olga.html">
