--- a/index.html
+++ b/index.html
@@ -158,41 +158,43 @@
     </div>
     <footer>
         <div class="gora" id="stopka">
-            <div class="stopka">
-                <div class="Logo">
-                    <a href="Olga.html">
-                        <img src="img/Logo.png" alt="Logo strony Olgi" />
-                    </a>
-                    <p>Strona Olgi</p>
-                    <p>Chorzów, Polska</p>
-                    <p><a
-                            href="mailto:olga@example.com?subject=Ulubione filmy&body=Cześć Olga!">olga@example.com</a>
-                    </p>
-                    <p><a href="tel: 123 456 789">tel. 123 456 789</a></p>
-                </div>
-            </div>
-            <div class="stopka">
-                <h3>Moje ulubione</h3>
-                <ul>
-                    <li><a href="#filmy-opis">Linia życia</a></li>
-                    <li><a href="#filmy-opis">Auta 2</a></li>
-                    <li><a href="#filmy-opis">Breaking Bad</a></li>
-                    <li><a href="#filmy-opis">Pulp Fiction</a></li>
-                    <li><a href="#filmy-opis">Kill Bill</a></li>
-                </ul>
-            </div>
-            <div class="stopka">
-                <h3>Newsletter filmowy</h3>
-                <div class="zapis">
-                    <p>Zapisz się, żeby dostawać moje recenzje filmowe!</p>
-                    <input type="email" id="newsletter" name="newsletter" placeholder="Wpisz swój adres email">
-                    <div class="wiersz">
-                        <input type="checkbox" name="zgoda-news" id="zgoda-news">
-                        <label for="zgoda-news">Wyrażam zgodę na...</label>
-                    </div>
-                    <a href="#">Zapisz się</a>
-                </div>
-            </div>
+            <table class="stopka-tabela">
+                <tr>
+                    <td class="stopka">
+                        <div class="Logo">
+                            <a href="Olga.html">
+                                <img src="img/Logo.png" alt="Logo strony Olgi" />
+                            </a>
+                            <p>Strona Olgi</p>
+                            <p>Chorzów, Polska</p>
+                            <p><a href="mailto:olga@example.com?subject=Ulubione filmy&body=Cześć Olga!">olga@example.com</a></p>
+                            <p><a href="tel: 123 456 789">tel. 123 456 789</a></p>
+                        </div>
+                    </td>
+                    <td class="stopka">
+                        <h3>Moje ulubione</h3>
+                        <ul>
+                            <li><a href="#filmy-opis">Linia życia</a></li>
+                            <li><a href="#filmy-opis">Auta 2</a></li>
+                            <li><a href="#filmy-opis">Breaking Bad</a></li>
+                            <li><a href="#filmy-opis">Pulp Fiction</a></li>
+                            <li><a href="#filmy-opis">Kill Bill</a></li>
+                        </ul>
+                    </td>
+                    <td class="stopka">
+                        <h3>Newsletter filmowy</h3>
+                        <div class="zapis">
+                            <p>Zapisz się, żeby dostawać moje recenzje filmowe!</p>
+                            <input type="email" id="newsletter" name="newsletter" placeholder="Wpisz swój adres email">
+                            <div class="wiersz">
+                                <input type="checkbox" name="zgoda-news" id="zgoda-news">
+                                <label for="zgoda-news">Wyrażam zgodę na...</label>
+                            </div>
+                            <a href="#">Zapisz się</a>
+                        </div>
+                    </td>
+                </tr>
+            </table>
         </div>
         <div class="dol">
             <p>Copyright 2025 by Olga &hearts;</p>
